<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_connexio">

    <fragment
        android:id="@+id/navigation_connexio"
        android:name="com.example.kadamm.ui.connexio.ConnexioFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_connexio" />

    <fragment
        android:id="@+id/navigation_usuari"
        android:name="com.example.kadamm.ui.usuari.UsuariFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_usuari" />

    <fragment
        android:id="@+id/navigation_fites"
        android:name="com.example.kadamm.ui.fites.FitesFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_fites" />
</navigation>