<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.connexio.ConnexioFragment">

    <Button
        android:id="@+id/btnConnecta"
        android:layout_width="307dp"
        android:layout_height="67dp"
        android:text="@string/btnConnectaText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipUsuari"
        app:layout_constraintVertical_bias="0.073" />

    <EditText
        android:id="@+id/ipUsuari"
        android:layout_width="297dp"
        android:layout_height="64dp"
        android:layout_marginTop="64dp"
        android:digits="0123456789."
        android:ems="15"
        android:inputType="number"
        android:maxLength="15"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titolConnexio" />

    <ImageView
        android:id="@+id/imgViewSemafor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/descripcio_semafor_vermell"
        android:src="@drawable/traffic_light_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConnecta"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/titolConnexio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/titolConnexio"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEmptyNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#C62316"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ipUsuari"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titolConnexio" />

</androidx.constraintlayout.widget.ConstraintLayout>